# mangos-wotlk

./: .clang-format  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  ChangeLog  ChangeLog.md  Mangos-WOTLK-Zkiller  NEWS  NEWS.md  README  README.md  SECURITY.md  appveyor.yml  bot_readme.txt  bot_todo.txt  botguy_readme.txt  configure.ac  mangos_botguy.sql  mangos_command_bot.sql  meson.build  meson_options.txt  travis_testing_stuff
contrib/extractor/: CMakeLists.txt  System.cpp  VC150_AD.sln  VC150_ad.vcxproj  dbcfile.cpp  dbcfile.h  meson.build  mpq_libmpq.cpp  mpq_libmpq.h
contrib/extractor/libmpq/: CMakeLists.txt  mpq.h
contrib/extractor/loadlib/: CMakeLists.txt  adt.cpp  adt.h  loadlib.cpp  loadlib.h  wdt.cpp  wdt.h
contrib/git_id/: CMakeLists.txt  git_id.cpp  git_id_vc150.sln  git_id_vc150.vcxproj
contrib/vmap_assembler/: CMakeLists.txt  meson.build  vmap_assemblerVC150.sln
contrib/vmap_assembler/VC150/: vmap_assembler.vcxproj
dep/libsidecar/: CMakeLists.txt
dep/libsidecar/stub/: libsidecar.c
src/framework/: CMakeLists.txt  meson.build
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: TypeContainer.h  TypeContainerFunctionsPtr.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: MemoryManagement.cpp  ThreadingModel.h
src/framework/Utilities/: Callback.h  EventProcessor.h  LinkedList.h
src/game/: AccountMgr.cpp  AccountMgr.h  AchievementMgr.cpp  AchievementMgr.h  AggressorAI.cpp  AntiCheat.cpp  AntiCheat.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarHandler.cpp  Camera.cpp  Camera.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  (+214 more)
src/game/AI/: AggressorAI.cpp  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAISelector.cpp  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  GuardianAI.cpp  GuardianAI.h  PetAI.cpp  ReactorAI.cpp  TotemAI.cpp
src/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/game/Anticheat/: Anticheat.hpp
src/game/Arena/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp
src/game/AuctionHouse/: AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  ahbot.conf.dist.in
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundDS.cpp  BattleGroundDS.h  BattleGroundDefines.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundIC.cpp  BattleGroundIC.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundQueue.cpp  BattleGroundQueue.h  BattleGroundRB.cpp  BattleGroundRB.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundRV.cpp  BattleGroundRV.h  BattleGroundSA.cpp  BattleGroundSA.h  BattleGroundWS.cpp  BattleGroundWS.h
src/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldHandler.cpp  BattlefieldWG.cpp  BattlefieldWG.h
src/game/Calendar/: Calendar.cpp  Calendar.h  CalendarHandler.cpp
src/game/Chat/: Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  Chat.cpp  Chat.h  ChatHandler.cpp  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  NpcCommands.cpp  debugcmds.cpp
src/game/Cinematics/: CinematicMgr.h  M2Stores.cpp  M2Structure.h
src/game/Combat/: CombatManager.cpp  CombatManager.h  HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h
src/game/DBScripts/: ScriptMgr.cpp  ScriptMgr.h
src/game/Entities/: Bag.cpp  Bag.h  Camera.cpp  Camera.h  CharacterHandler.cpp  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureLinkingMgr.cpp  CreatureLinkingMgr.h  CreatureSettings.cpp  DynamicObject.cpp  DynamicObject.h  EntitiesMgr.h  GameObject.cpp  GameObject.h  GameObjectDefines.h  GossipDef.cpp  GossipDef.h  Item.cpp  Item.h  ItemEnchantmentMgr.cpp  ItemEnchantmentMgr.h  ItemHandler.cpp  ItemPrototype.cpp  ItemPrototype.h  MiscHandler.cpp  NPCHandler.cpp  Object.cpp  Object.h  ObjectDefines.h  ObjectGuid.cpp  ObjectGuid.h  ObjectVisibility.cpp  ObjectVisibility.h  Pet.cpp  Pet.h  PetHandler.cpp  PetitionsHandler.cpp  (+27 more)
src/game/GMTickets/: GMTicketHandler.cpp  GMTicketMgr.cpp  GMTicketMgr.h
src/game/GameEvents/: GameEventMgr.cpp  GameEventMgr.h
src/game/Globals/: CombatCondition.cpp  Conditions.cpp  Conditions.h  GraveyardManager.cpp  Locales.cpp  Locales.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  SharedDefines.h  UnitCondition.cpp
src/game/Grids/: CellImpl.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.cpp  ObjectGridLoader.cpp
src/game/Groups/: Group.cpp  Group.h  GroupHandler.cpp
src/game/Guilds/: Guild.cpp  Guild.h  GuildHandler.cpp  GuildMgr.cpp
src/game/LFG/: LFG.cpp  LFG.h  LFGDefines.h  LFGHandler.cpp  LFGMgr.cpp  LFGMgr.h  LFGQueue.cpp  LFGQueue.h
src/game/Loot/: LootHandler.cpp  LootMgr.cpp  LootMgr.h
src/game/Mails/: Mail.cpp  Mail.h  MailHandler.cpp  MassMailMgr.cpp
src/game/Maps/: GridDefines.h  GridMap.cpp  GridMap.h  GridMapDefines.h  InstanceData.cpp  InstanceData.h  Map.cpp  Map.h  MapDataContainer.cpp  MapDataContainer.h  MapManager.cpp  MapManager.h  MapPersistentStateMgr.cpp  MapPersistentStateMgr.h  SpawnGroup.cpp  SpawnGroup.h  SpawnGroupDefines.h  (+7 more)
src/realmd/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  SessionManager.cpp  SessionManager.h  meson.build  realmd.conf.dist.in
(+1976 files in other folders)
